fix squishing of carousel images
let them find their own height

--- a/walkr/static/css/styles.css
+++ b/walkr/static/css/styles.css
@@ -1,7 +1,3 @@
-.h-55{
-    height: 55vh!important;
-}
-
 .carousel-control-next-icon, .carousel-control-prev-icon {
     filter: invert(1);
 }
